--- a/experince.css
+++ b/experince.css
@@ -45,7 +45,7 @@
 }
 
 #portfolio {
-  background: url("codeBG.jpg") no-repeat center center; 
+  background: url("laptop-3335722_1920.jpg") no-repeat center center; 
   background-size: cover;
   position: relative;
   text-align: center;
