--- a/aboutme.css
+++ b/aboutme.css
@@ -1,4 +1,10 @@
-/* Set box sizing on all elements. */
+.nav-pills
+{
+  font-family: 'Amatic SC', cursive;
+  font-size: 3.5em;
+  margin-bottom: 10%;
+
+}
 * {
   box-sizing: border-box;
 }
@@ -86,7 +92,6 @@ section.questions h2 {
   color: #45473D;
 }
 
-/* All paragraphs within questions section directly adjacent to an h2 get a 1em indentation. */
 section.questions h2 ~ p {
   text-indent: 1em;
 }
@@ -111,7 +116,7 @@ footer ul {
   padding: 0;
 }
 
-/* Any list-item that is a child of unordered list with class of 'social' is rendered as an inline-block element. This keeps them in a straight line, as opposed to stacked. */
+
 .social > li {
   display: inline-block;
 }
@@ -143,3 +148,379 @@ footer ul li a:hover {
   line-height: 3em;
   }
 }
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,700,300);
+
+#techList {
+	position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: 'Oswald', sans-serif;
+  font-size: 100%;
+  text-transform: uppercase;
+  color: #666;
+}
+
+#techList li {
+	position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.swift {
+  font-weight: 700;
+  letter-spacing: -.05em;
+  -webkit-transform: 
+  		scale(7.5, 7.8)
+ 			translate(1.18em, .68em);
+  -moz-transform: 
+    	scale(7.5, 7.8)
+ 			translate(1.18em, .68em);
+}
+
+.javascript {
+  letter-spacing: -.04em;
+  font-weight: 400;
+	-webkit-transform: 
+    	scale(1.4)
+    	rotate(90deg)
+    	translate(3.88em, -13.2em);
+  -moz-transform: 
+    	scale(1.4)
+    	rotate(90deg)
+    	translate(3.88em, -13.2em);
+}
+
+
+
+.git {
+  font-weight: 300;
+  letter-spacing: -.03em;
+  word-spacing: .3em;
+  -webkit-transform: 
+    	scale(2)
+    	translate(2.12em, 5.14em);
+  -moz-transform: 
+    	scale(2)
+    	translate(2.12em, 5.14em);
+}
+
+.python {
+  font-weight: 400;
+  letter-spacing: -.04em;
+  -webkit-transform: 
+    	scale(2.85, 3)
+      translate(7.14em, 3.55em);
+  -moz-transform: 
+      scale(2.85, 3)
+      translate(7.14em, 3.55em);
+}
+
+.unix {
+  letter-spacing: -0.01em;
+  font-weight: 700;
+	-webkit-transform: 
+    	scale(2.4, 2.3)
+    	rotate(90deg)
+    	translate(6em, -5.8em);
+  -moz-transform: 
+    	scale(2.4, 2.3)
+    	rotate(90deg)
+    	translate(6em, -5.8em);
+}
+
+.java {
+  letter-spacing: .01em;
+  font-weight: 700;
+	-webkit-transform: 
+    	scale(6.8, 6.75)
+    	rotate(90deg)
+    	translate(1.32em, -4.54em);
+  -moz-transform: 
+    	scale(6.8, 6.75)
+    	rotate(90deg)
+    	translate(1.32em, -4.54em);
+}
+
+.C {
+  letter-spacing: 0.045em;
+  font-weight: 700;
+	-webkit-transform: 
+    	scale(3.88, 3.8)
+    	translate(5.42em, 3.72em);
+  -moz-transform: 
+    	scale(3.88, 3.8)
+    	translate(5.42em, 3.72em);
+}
+
+.objectoriented {
+  font-weight: 700;
+  letter-spacing: -.010em;
+  -webkit-transform: 
+    	scale(1.85, 1.9)
+      translate(1.86em, 6.5em);
+  -moz-transform: 
+      scale(1.85, 1.9)
+      translate(1.86em, 6.5em);
+}
+
+.mac {
+  font-weight: 300;
+  letter-spacing: -0.05em;
+  -webkit-transform: 
+    	scale(2.75, 3)
+      translate(1.72em, 4.95em);
+  -moz-transform: 
+      scale(2.75, 3)
+      translate(1.72em, 4.95em);
+}
+
+.go {
+  font-weight: 300;
+  letter-spacing: -0.07em;
+  -webkit-transform: 
+    	scale(3.9, 4)
+      translate(6.05em, .95em);
+  -moz-transform: 
+      scale(3.9, 4)
+      translate(6.05em, .95em);
+}
+
+.windows {
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  word-spacing: .2em;
+  -webkit-transform: 
+  		scale(2)
+      translate(2.28em, 8.58em);
+  -moz-transform: 
+      scale(2)
+      translate(2.28em, 8.58em);
+}
+
+.angular {
+  font-weight: 300;
+  letter-spacing: 0em;
+  word-spacing: .1em;
+  -webkit-transform: 
+    	scale(2)
+      translate(12.7em, 8.6em);
+  -moz-transform: 
+      scale(2)
+      translate(12.7em, 8.6em);
+}
+
+.svn {
+  color: #ee5d29;
+  font-weight: 700;
+  letter-spacing: -.03em;
+  -webkit-transform: 
+    	scale(3.4)
+      translate(7.03em, 2.15em);
+  -moz-transform: 
+      scale(3.4)
+      translate(7.03em, 2.15em);
+}
+
+.skills {
+  color: #ee5d29;
+  font-weight: 700;
+  letter-spacing: -.03em;
+  -webkit-transform: 
+    	scale(1.8)
+      translate(9.95em, 9.55em);
+  -moz-transform: 
+      scale(1.8)
+      translate(9.95em, 9.55em);
+}
+
+.contact {
+	margin: 0;
+	height: 100%;
+/*	background:#D4E157;*/
+	text-align: center;
+	font-family: 'Ubuntu';
+}
+.frame{
+	width: 600px;
+	height: 350px;
+	margin: 250px auto 0;
+	position: relative;
+	background: #435d77;
+	border-radius:0 0 40px 40px; 
+}
+#button_open_envelope{
+	width: 180px;
+	height: 30px;
+	position: absolute;
+	z-index: 311;
+	top: 250px;
+	left: 208px;
+	border-radius: 10px;
+	color: #fff;
+	font-size: 26px;
+	padding:15px 0; 
+	border: 2px solid #fff;
+	transition:.3s;
+}
+#button_open_envelope:hover{
+	background: #FFf;
+	color: #2b67cb;
+	transform:scale(1.1);
+	transition:background .25s, transform .5s,ease-in;
+	cursor: pointer;
+}
+.message{
+	position: relative;
+	width: 580px;
+	min-height:300px;
+	height: auto;
+	background: #fff;
+	margin: 0 auto;
+	top: 30px;
+	box-shadow: 0 0 5px 2px #333;
+	transition:2s ease-in-out;
+	transition-delay:1.5s;
+	z-index: 300;
+}
+.left,.right,.top{width: 0;	height: 0;position:absolute;top:0;z-index: 310;}
+.left{	
+	border-left: 300px solid #337efc;
+	border-top: 160px solid transparent;
+	border-bottom: 160px solid transparent;
+}
+.right{	
+	border-right: 300px solid #337efc;
+	border-top: 160px solid transparent;
+	border-bottom: 160px solid transparent;;
+	left:300px;
+}
+.top{	
+	border-right: 300px solid transparent;
+	border-top: 200px solid #03A9F4;
+	border-left: 300px solid transparent;
+	transition:transform 1s,border 1s, ease-in-out;
+	transform-origin:top;
+	transform:rotateX(0deg);
+	z-index: 500;
+}
+.bottom{
+	width: 600px;
+	height: 190px;
+	position: absolute;
+	background: #2b67cb;
+	top: 160px;
+	border-radius:0 0 30px 30px;
+	z-index: 310; 
+}
+
+.open{
+	transform-origin:top;
+	transform:rotateX(180deg);
+	transition:transform .7s,border .7s,z-index .7s ease-in-out;
+	border-top: 200px solid #2c3e50;
+	z-index: 200;
+}
+.pull{
+	-webkit-animation:message_animation 2s 1 ease-in-out;
+	animation:message_animation 2s 1 ease-in-out;
+	-webkit-animation-delay:.9s;
+	animation-delay:.45s;
+	transition:1.5s;
+	transition-delay:1s;
+	z-index: 350;
+}
+#name,#email,#phone,#messarea,#send{
+	margin: 0;
+	padding: 0 0 0 10px;
+	width: 570px;
+	height:40px;
+	float: left;
+	display: block;
+	font-size: 18px;
+	color: #2b67cb;
+	border:none;
+	border-bottom:1px solid #bdbdbd;
+	letter-spacing: normal;
+}
+#messarea{
+	height: 117px;
+	width: 560px;
+	overflow: auto;
+	border:none;
+	padding: 10px;
+}
+#send{ 
+	width:   580px;
+	padding: 0;	
+	border:  none;
+	cursor:  pointer;
+	background: #7CB342;
+	color: #fff;
+	transition:.35s;
+	letter-spacing: 1px;
+}
+#send:hover{background:tomato;transition:.35s;}
+
+::-moz-placeholder{color: #7CB342;font-family: 'Ubuntu';font-size: 20px;opacity: 1;} 
+::-webkit-input-placeholder {color: #7CB342; font-family: 'Ubuntu';font-size: 20px;}
+*:focus {outline: none;}
+input:focus:invalid,textarea:focus:invalid {
+ /* when a field is considered invalid by the browser */
+    background: #fff url(images/invalid.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #d45252;
+    border:1px solid #b03535;
+}
+input:required:valid,textarea:required:valid { 
+	/* when a field is considered valid by the browser */
+    background: #fff url(images/valid.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #5cd053;
+    border-color: #28921f;
+}
+
+
+@-webkit-keyframes message_animation {
+	0%{
+		transform:translatey(0px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	50%{
+		transform:translatey(-340px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	51%{
+		transform:translatey(-340px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
+	100%{
+		transform:translatey(0px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
+}
+@keyframes message_animation {
+	0%{
+		transform:translatey(0px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	50%{
+		transform:translatey(-340px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	51%{
+		transform:translatey(-340px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
+	100%{
+		transform:translatey(0px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
+}
+
