--- a/contactMe.css
+++ b/contactMe.css
@@ -1,165 +1,190 @@
-body{
-  overflow-y: scroll;
-  background-color: #EBEBEB;  
+.contact {
+	margin: 0;
+	height: 100%;
+/*	background:#D4E157;*/
+	text-align: center;
+	font-family: 'Ubuntu';
 }
-.title{
-  margin: 0 auto;
-  width: 50%;
-  text-align: center;
-  padding-bottom: 10px;
-  font-family: Rajdhani;
-  font-size: 32px;
-  color: #2E4B62;
+.frame{
+	width: 600px;
+	height: 350px;
+	margin: 250px auto 0;
+	position: relative;
+	background: #435d77;
+	border-radius:0 0 40px 40px; 
 }
-.wrapper {
-  width: 50%;
-  height: 50%;
-  margin: 5% auto 0 auto; 
+#button_open_envelope{
+	width: 180px;
+	height: 30px;
+	position: absolute;
+	z-index: 311;
+	top: 250px;
+	left: 208px;
+	border-radius: 10px;
+	color: #fff;
+	font-size: 26px;
+	padding:15px 0; 
+	border: 2px solid #fff;
+	transition:.3s;
 }
-.font {
-  font-size: 16px;
-  font-family: Helvetica, sans-serif;
-  color: white;
+#button_open_envelope:hover{
+	background: #FFf;
+	color: #2b67cb;
+	transform:scale(1.1);
+	transition:background .25s, transform .5s,ease-in;
+	cursor: pointer;
 }
-.form {
-  text-align: center; 
-  -webkit-animation: bounce 1.5s infinite;
-  -moz-animation: bounce 1.5s infinite;
-  animation: bounce 1.5s infinite;
+.message{
+	position: relative;
+	width: 580px;
+	min-height:300px;
+	height: auto;
+	background: #fff;
+	margin: 0 auto;
+	top: 30px;
+	box-shadow: 0 0 5px 2px #333;
+	transition:2s ease-in-out;
+	transition-delay:1.5s;
+	z-index: 300;
 }
-.shadow{
-  box-shadow: 0px 0px 20px 5px #AAA;
-  opacity: 0.5;
-  border-radius: 100px;
-  width: 45%; 
-  margin: 40px auto 0 auto;
-  padding: 0 10px;  
-  -webkit-animation: shadow 1.5s infinite;
+.left,.right,.top{width: 0;	height: 0;position:absolute;top:0;z-index: 310;}
+.left{	
+	border-left: 300px solid #337efc;
+	border-top: 160px solid transparent;
+	border-bottom: 160px solid transparent;
 }
-.field-in {
-  display: block;
-  margin: 10px auto;
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
-  width: 50%;
-  -webkit-transition: all 0.5s ease 0s;
-  -moz-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
+.right{	
+	border-right: 300px solid #337efc;
+	border-top: 160px solid transparent;
+	border-bottom: 160px solid transparent;;
+	left:300px;
 }
-.name {
-  background-color: #EE78D1;  
-  border-bottom: 5px solid #CB64B2;
+.top{	
+	border-right: 300px solid transparent;
+	border-top: 200px solid #03A9F4;
+	border-left: 300px solid transparent;
+	transition:transform 1s,border 1s, ease-in-out;
+	transform-origin:top;
+	transform:rotateX(0deg);
+	z-index: 500;
 }
-.name:hover{
-  background-color: #DF1B76;
-  border-bottom: 5px solid #B2175F;
-}
-.name:focus, .email:focus, .message:focus{
-  outline: none;
-  padding:15px;
-}
-.email {
-  background-color: #7239C1;  
-  border-bottom: 5px solid #502789;
-}
-.email:hover{
-  background-color: #2014CB;
-  border-bottom: 5px solid #18108E;
-}
-.message {   
-  background-color: #0F9BE6;
-  border-bottom: 5px solid #1185C3;
-  overflow: hidden;
-  height: 50px;
-}
-.message:hover{
-  background-color: #2DD7BB;
-  border-bottom: 5px solid #2BB09A;
-  height: 150px;
-}
-.submit{
-  border-radius:5px;
-  padding:10px;
-  background-color: #EE78D1;  
-  border: none;
-  border-bottom: 5px solid #CB64B2;  
-  -webkit-transition: all 0.5s ease 0s;
-  -moz-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
-}
-.submit:hover{
-  -webkit-transform: translate(0, 4px);
-  border-bottom: 2px solid #CB64B2;  
-  box-shadow: inset 0px 0px 10px 10px #CF5DB2;
-  cursor: pointer;
-}
-::-webkit-input-placeholder {
-   color: white;
+.bottom{
+	width: 600px;
+	height: 190px;
+	position: absolute;
+	background: #2b67cb;
+	top: 160px;
+	border-radius:0 0 30px 30px;
+	z-index: 310; 
 }
 
-:-moz-placeholder { 
-   color: white;
+.open{
+	transform-origin:top;
+	transform:rotateX(180deg);
+	transition:transform .7s,border .7s,z-index .7s ease-in-out;
+	border-top: 200px solid #2c3e50;
+	z-index: 200;
+}
+.pull{
+	-webkit-animation:message_animation 2s 1 ease-in-out;
+	animation:message_animation 2s 1 ease-in-out;
+	-webkit-animation-delay:.9s;
+	animation-delay:.45s;
+	transition:1.5s;
+	transition-delay:1s;
+	z-index: 350;
+}
+#name,#email,#phone,#messarea,#send{
+	margin: 0;
+	padding: 0 0 0 10px;
+	width: 570px;
+	height:40px;
+	float: left;
+	display: block;
+	font-size: 18px;
+	color: #2b67cb;
+	border:none;
+	border-bottom:1px solid #bdbdbd;
+	letter-spacing: normal;
+}
+#messarea{
+	height: 117px;
+	width: 560px;
+	overflow: auto;
+	border:none;
+	padding: 10px;
+}
+#send{ 
+	width:   580px;
+	padding: 0;	
+	border:  none;
+	cursor:  pointer;
+	background: #7CB342;
+	color: #fff;
+	transition:.35s;
+	letter-spacing: 1px;
+}
+#send:hover{background:tomato;transition:.35s;}
+
+::-moz-placeholder{color: #7CB342;font-family: 'Ubuntu';font-size: 20px;opacity: 1;} 
+::-webkit-input-placeholder {color: #7CB342; font-family: 'Ubuntu';font-size: 20px;}
+*:focus {outline: none;}
+input:focus:invalid,textarea:focus:invalid {
+ /* when a field is considered invalid by the browser */
+    background: #fff url(images/invalid.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #d45252;
+    border:1px solid #b03535;
+}
+input:required:valid,textarea:required:valid { 
+	/* when a field is considered valid by the browser */
+    background: #fff url(images/valid.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #5cd053;
+    border-color: #28921f;
 }
 
-::-moz-placeholder { 
-   color: white; 
-}
 
-:-ms-input-placeholder {  
-   color: white;  
+@-webkit-keyframes message_animation {
+	0%{
+		transform:translatey(0px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	50%{
+		transform:translatey(-340px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	51%{
+		transform:translatey(-340px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
+	100%{
+		transform:translatey(0px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
 }
-
-@-webkit-keyframes bounce{
-  0%{
-    
-  }
-  50%{
-    -webkit-transform: translate(0, 8px);
-  }
+@keyframes message_animation {
+	0%{
+		transform:translatey(0px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	50%{
+		transform:translatey(-340px);
+		z-index: 300;
+		transition: 1s ease-in-out;
+	}
+	51%{
+		transform:translatey(-340px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
+	100%{
+		transform:translatey(0px);
+		z-index: 350;
+		transition: 1s ease-in-out;
+	}
 }
-@-moz-keyframes bounce{
-  0%{
-    
-  }
-  50%{
-    -moz-transform: translate(0, 8px);
-  }
-}
-@keyframes bounce{
-  0%{
-    
-  }
-  50%{
-    transform: translate(0, 8px);
-  }
-}
-@-webkit-keyframes shadow{
-  0%{
-    
-  }
-  50%{
-    opacity: 0.8;
-    width: 50%;
-  }
-}
-@-moz-keyframes shadow{
-  0%{
-    
-  }
-  50%{
-    opacity: 0.8;
-    width: 50%;
-  }
-}
-@keyframes shadow{
-  0%{
-    
-  }
-  50%{
-    opacity: 0.8;
-    width: 50%;
-  }
-}
-
 
